# zmtools

./: .bumpversion.cfg  .gitignore  README.md  README.txt  pyproject.toml  setup.cfg  setup.py
tests/: test_api.py
tests/test_files/: read_text_file
tests/test_files/get_dpkg_version/: mypackage
zmtools/: __init__.py  api.py
