[metadata]
name = zmtools
version = 0.0.0
author = Zeke Marffy
author_email = zmarffy@me.com
home_page = https://github.com/zmarffy/zmtools
description = "Various tools used across Zeke Marffy's programs"
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
platform = any